# TrafficLight

./: CMakeLists.txt  Introduction to behaviors.odt  README.txt  TrafficLights
include/: Agent.h  Behaviors.h  Dispatcher.h  TrafficLights.h  glu_objs.h
src/: TrafficLights.cpp  main.cpp  standard.h
